--- a/views/pages/cablePage.handlebars
+++ b/views/pages/cablePage.handlebars
@@ -340,7 +340,7 @@
                             +${{data.sports.Price}}  <small>/ m</small>
                         </span>
                     </span>
-                    <h2 class="title">Spo{{data.sports.Name}} rts</h2>
+                    <h2 class="title">{{data.sports.Name}}</h2>
                     <p class="info">This is the upgrade plan for those who have a preferred plan already running.</p>
                     <ul class="features">
                         <li>
