--- a/views/pages/addservicesPage.handlebars
+++ b/views/pages/addservicesPage.handlebars
@@ -13,7 +13,7 @@
                 </div>
                 <div class="stepper-item">
                   <div class="step-counter">3</div>
-                  <div class="step-name" onclick="#">Checkout</div>
+                  <div class="step-name" onclick="location.href='/checkout';">Checkout</div>
                 </div>
             </div>
             {{!-- {{#if hasErrors}}
