--- a/views/partials/navbar.handlebars
+++ b/views/partials/navbar.handlebars
@@ -17,15 +17,8 @@
           <li>
             <a href="/service">Services</a>
           </li>
-            <li class="dropdown">
-              <a href="account.html" class="dropdown-toggle">Account 
-                  <!-- <i class="fa fa-caret-down" aria-hidden="true"></i> -->
-              </a>
-                  <!-- <ul class="dropdown-menu">
-                      <li><a href="#">My Account</a></li>
-                      <li><a href="#">Modify Existing Services</a></li>
-                      <li><a href="#">Cancel Services</a></li>
-                  </ul> -->
+            <li>
+              <a href="/account">Account </a>
             </li>
             <li>
             <a href="/logout">Logout</a>
