--- a/views/pages/addservicesPage.handlebars
+++ b/views/pages/addservicesPage.handlebars
@@ -49,9 +49,9 @@
                                 <button class="carousel-btn right-btn style3"><i class="fa fa-chevron-circle-right" aria-hidden="true"></i></button>
                             </div>
                         </div>
-                        <figure class="pricing-row">87 channels</figure>
-                        <figure class="pricing-row">Dedicated Support</figure>
-                        <figure class="pricing-row">Mobile App</figure>
+                        <figure class="pricing-row">Up to 20 channels</figure>
+                        <figure class="pricing-row">Full Interactive TV guide</figure>
+                        <figure class="pricing-row">Includes community channels</figure>
                         {{!-- <figure class="pricing-row strike">DVR Not Included</figure> --}}
                         <div class="pricing-footer">
                         <div class="gem-button-container gem-button-position-center style3">
@@ -95,8 +95,8 @@
                             </div>
                         </div>
                         <figure class="pricing-row">Additional 56 channels</figure>
-                        <figure class="pricing-row">Dedicated Support</figure>
-                        <figure class="pricing-row">Mobile App</figure>
+                        <figure class="pricing-row">Includes all major TV Networks</figure>
+                        <figure class="pricing-row">Includes 72 hour Replay TV feature</figure>
                         {{!-- <figure class="pricing-row strike">DVR Not Included</figure> --}}
                         <div class="pricing-footer">
                         <div class="gem-button-container gem-button-position-center">
@@ -140,10 +140,11 @@
                             </div>
                         </div>
 
-                        <figure class="pricing-row style2">Additional 68 channels</figure>
-                        <figure class="pricing-row style2">Dedicated Support</figure>
+                         <figure class="pricing-row style2">Additional 68 channels</figure>
+                        <figure class="pricing-row style2">Includes PVR video recording</figure>
                         {{!-- <figure class="pricing-row style2">25 hours of Cloud DVR</figure> --}}
-                        <figure class="pricing-row style2">Mobile App</figure>
+                        <figure class="pricing-row style2">Includes 72 hour Replay TV</figure>
+                        <figure class="pricing-empty style2"></figure>
                         <!-- <div class="pricing-footer"> -->
                         <div class="gem-button-position-center style2">
                             {{#if data.preferred.purchased}}
@@ -184,10 +185,10 @@
                                 <button class="carousel-btn2 right-btn4"><i class="fa fa-chevron-circle-right" aria-hidden="true"></i></button>
                             </div>
                         </div>
-                        <figure class="pricing-row  style2">41 channels</figure>
-                        <figure class="pricing-row style2">Dedicated Support</figure>
-                        <figure class="pricing-row style2">Mobile App</figure>
-                        {{!-- <figure class="pricing-row strike">DVR Not Included</figure> --}}
+                        <figure class="pricing-row  style2">Additional 41 channels</figure>
+                        <figure class="pricing-row style2">The ultimate entertainment TV package</figure>
+                        <figure class="pricing-row style2">Up to 185 + channels and growing</figure>
+                        <figure class="pricing-row style2">Requires Preferred package</figure>
                         <div class="pricing-footer">
                         <div class="gem-button-container gem-button-position-center style2">
                            {{#if data.expanded.purchased}}
@@ -236,7 +237,7 @@
                                   <path d="M10 15.172l9.192-9.193 1.415 1.414L10 18l-6.364-6.364 1.414-1.414z" fill="currentColor" />
                               </svg>
                           </span>
-                          <span>Additional <strong>12</strong> channels</span>
+                          <span><strong>12</strong>additional premium Sports channels</span>
                       </li>
                       <li>
                           <span class="icon">
@@ -245,7 +246,7 @@
                                   <path d="M10 15.172l9.192-9.193 1.415 1.414L10 18l-6.364-6.364 1.414-1.414z" fill="currentColor" />
                               </svg>
                           </span>
-                          <span>Dedicated Support</span>
+                           <span>Combined with the Preferred Plan overs the ultimate in sports programming</span>
                       </li>
                      
                       <li>
@@ -264,7 +265,7 @@
                                   <path d="M10 15.172l9.192-9.193 1.415 1.414L10 18l-6.364-6.364 1.414-1.414z" fill="currentColor" />
                               </svg>
                           </span>
-                          <span>Mobile App</span>
+                          <span>Record via PVR and also enjoy Replay TV for all your shows so you don't miss anything.</span>
                       </li>
                   </ul>
                   {{#if data.sports.purchased}}
@@ -294,7 +295,7 @@
                                   <path d="M10 15.172l9.192-9.193 1.415 1.414L10 18l-6.364-6.364 1.414-1.414z" fill="currentColor" />
                               </svg>
                           </span>
-                          <span><strong>6</strong> channels</span>
+                          <span><strong>6</strong> additional HBO premium channels</span>
                       </li>
                       <li>
                           <span class="icon">
@@ -303,7 +304,7 @@
                                   <path d="M10 15.172l9.192-9.193 1.415 1.414L10 18l-6.364-6.364 1.414-1.414z" fill="currentColor" />
                               </svg>
                           </span>
-                          <span>Dedicated Support</span>
+                          <span>Movies, Documentaries specials</span>
                       </li>
                      
                       <li>
@@ -322,8 +323,17 @@
                                   <path d="M10 15.172l9.192-9.193 1.415 1.414L10 18l-6.364-6.364 1.414-1.414z" fill="currentColor" />
                               </svg>
                           </span>
-                          <span>Mobile App</span>
+                          <span>HBO only original series shows </span>
                       </li>
+                      <li>
+                            <span class="icon">
+                                <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" width="24" height="24">
+                                    <path fill="none" d="M0 0h24v24H0z" />
+                                    <path d="M10 15.172l9.192-9.193 1.415 1.414L10 18l-6.364-6.364 1.414-1.414z" fill="currentColor" />
+                                </svg>
+                            </span>
+                            <span>Walking Dead, Game of Thrones, Dune, Curb your Enthusiasm etc etc.</span>
+                        </li>
                   </ul>
                   {{#if data.hbo.purchased}}
                   <button class="button HBO" id="hbobtn" value={{data.hbo.id}}>Remove HBO</button>
@@ -339,7 +349,7 @@
       
                   <span class="pricing Cinemax">
                       <span>
-                          +${{data.spanish.Price}} <small>/ m</small>
+                          {{!-- +${{data.spanish.Price}} <small>/ m</small> --}}
                       </span>
                   </span>
                   <h2 class="title">{{data.spanish.Name}}</h2>
@@ -352,16 +362,16 @@
                                   <path d="M10 15.172l9.192-9.193 1.415 1.414L10 18l-6.364-6.364 1.414-1.414z" fill="currentColor" />
                               </svg>
                           </span>
-                          <span><strong>4</strong> channels</span>
+                          <span>Coming soon a comprehensive selection of Spanish language shows from all over the world.</span>
                       </li>
                       <li class="sub-li">
-                          <span class="icon">
+                          {{!-- <span class="icon">
                               <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" width="24" height="24">
                                   <path fill="none" d="M0 0h24v24H0z" />
                                   <path d="M10 15.172l9.192-9.193 1.415 1.414L10 18l-6.364-6.364 1.414-1.414z" fill="currentColor" />
                               </svg>
                           </span>
-                          <span>Dedicated Support</span>
+                          <span>Dedicated Support</span> --}}
                       </li>
                      
                       <li class="sub-li">
@@ -374,20 +384,23 @@
                               {{!-- <span class="strike">No additional DVR hrs. beyond Basic</span> --}}
                       </li>
                       <li class="sub-li">
-                          <span class="icon">
+                          {{!-- <span class="icon">
                               <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" width="24" height="24">
                                   <path fill="none" d="M0 0h24v24H0z" />
                                   <path d="M10 15.172l9.192-9.193 1.415 1.414L10 18l-6.364-6.364 1.414-1.414z" fill="currentColor" />
                               </svg>
                           </span>
-                          <span>Mobile App</span>
+                          <span>Mobile App</span> --}}
                       </li>
                   </ul>
-                  {{#if data.spanish.purchased}}
+                  <button class="button Cinemax">
+                        Coming Soon
+                    </button>
+                  {{!-- {{#if data.spanish.purchased}}
                   <button class="button Cinemax" id="spanishbtn" value={{data.spanish.id}}>Remove Spanish</button>
                   {{else}}
                   <button class="button Cinemax" id="spanishbtn" value={{data.spanish.id}}>Add Spanish</button>
-                  {{/if}}
+                  {{/if}} --}}
               </div>
           </article>
 {{/if}}
