--- a/views/pages/cablePage.handlebars
+++ b/views/pages/cablePage.handlebars
@@ -47,22 +47,26 @@
                                 <div class="container-card bg-orange-box">
                                     <i class="fa-solid fa-trophy"></i>
                                     <p class="card-title">Ultimate TV viewing experience</p>
-                                    <p class="card-description">Our in-home streaming technology delivers lightning-fast speeds, crystal-clear pictures, and reliable service so you can enjoy 
-                                    the best a vast selection of channels can provide.</p>
+                                    <p class="card-description">Lightening fast interactive TV guide, SD, HD and 4K quality programming offers the highest in TV quality and reliability so you can fully enjoy the very best in entertainment.</p>
+                                    <button class="read-more-btn ">Read More</button>
                                 </div>
                             </div>
                             <div class="card">
                                 <div class="container-card bg-orange-box">
                                     <i class="fas fa-tv"></i>
                                     <p class="card-title">Stay Tuned to All Your TV Favorites</p>
-                                    <p class="card-description">72 Hours of replay of live TV, restart TV, and streaming apps allow you to watch you what you want when you want it.</p>
+                                    <p class="card-description">72 hour replay, Start Over, PVR and Resume features delivers the best TV experiences and allows you to watch what you want and when you want together with the whole home, different program watching option.</p>
+                                    <button class="read-more-btn ">Read More</button>
                                 </div>
                             </div>
                             <div class="card">
                                 <div class="container-card bg-orange-box">
                                     <i class="fa-solid fa-piggy-bank"></i>
-                                    <p class="card-title">Simple Setup. Better Savings</p>
-                                    <p class="card-description">Free Cloud PVR recording, no equipment fees, simple installation, weather-free performance, and a lower bill are just some of what we offer.</p>
+                                    <p class="card-title">Simple Setup with superior features and savings</p>
+                                    <p class="card-description">Free Cloud based PVR recordings, Free Replay TV, Free Resume and Start Over features without the need for any set top boxes or any additional hardware, totally eliminates these additional and costly add-ons while eliminating most of your cabling throughout your home resulting in significant monthly savings and therefore lower overall costs for TV and your entertainment.
+                                        Additionally our very small TV modem which attaches directly to the TV via its HDMI port, turns any TV into a Smart TV with all those features that it brings, now you'll have the Ultimate in entertainment.
+                                    </p>
+                                     <button class="read-more-btn ">Read More</button>
                                 </div>
                             </div>
                  
@@ -116,9 +120,9 @@
                                 <button class="carousel-btn right-btn style3"><i class="fa fa-chevron-circle-right" aria-hidden="true"></i></button>
                             </div>
                         </div>
-                        <figure class="pricing-row">87 channels</figure>
-                        <figure class="pricing-row">Dedicated Support</figure>
-                        <figure class="pricing-row">Mobile App</figure>
+                        <figure class="pricing-row">Up to 20 channels</figure>
+                        <figure class="pricing-row">Full Interactive TV guide</figure>
+                        <figure class="pricing-row">Includes community channels</figure>
                         {{!-- <figure class="pricing-row strike">DVR Not Included</figure> --}}
                         <div class="pricing-footer style3">
                         <div class="gem-button-container gem-button-position-center style3">
@@ -159,8 +163,8 @@
                             </div>
                         </div>
                         <figure class="pricing-row">Additional 56 channels</figure>
-                        <figure class="pricing-row">Dedicated Support</figure>
-                        <figure class="pricing-row">Mobile App</figure>
+                        <figure class="pricing-row">Includes all major TV Networks</figure>
+                        <figure class="pricing-row">Includes 72 hour Replay TV feature</figure>
                         {{!-- <figure class="pricing-row strike">DVR Not Included</figure> --}}
                         <div class="pricing-footer">
                         <div class="gem-button-container gem-button-position-center">
@@ -201,9 +205,10 @@
                         </div>
 
                         <figure class="pricing-row style2">Additional 68 channels</figure>
-                        <figure class="pricing-row style2">Dedicated Support</figure>
+                        <figure class="pricing-row style2">Includes PVR video recording</figure>
                         {{!-- <figure class="pricing-row style2">25 hours of Cloud DVR</figure> --}}
-                        <figure class="pricing-row style2">Mobile App</figure>
+                        <figure class="pricing-row style2">Includes 72 hour Replay TV</figure>
+                        <figure class="pricing-empty style2"></figure>
                         <!-- <div class="pricing-footer"> -->
                         <div class="gem-button-position-center style2">
                             <a href="/compareplans" class="gem-button gem-orange style2">Compare Plans</a>
@@ -241,9 +246,10 @@
                                 <button class="carousel-btn2 right-btn4"><i class="fa fa-chevron-circle-right" aria-hidden="true"></i></button>
                             </div>
                         </div>
-                        <figure class="pricing-row  style2">41 channels</figure>
-                        <figure class="pricing-row style2">Dedicated Support</figure>
-                        <figure class="pricing-row style2">Mobile App</figure>
+                        <figure class="pricing-row  style2">Additional 41 channels</figure>
+                        <figure class="pricing-row style2">The ultimate entertainment TV package</figure>
+                        <figure class="pricing-row style2">Up to 185 + channels and growing</figure>
+                        <figure class="pricing-row style2">Requires Preferred package</figure>
                         {{!-- <figure class="pricing-row strike">DVR Not Included</figure> --}}
                         <div class="pricing-footer">
                         <div class="gem-button-container gem-button-position-center style2">
@@ -350,7 +356,7 @@
                                     <path d="M10 15.172l9.192-9.193 1.415 1.414L10 18l-6.364-6.364 1.414-1.414z" fill="currentColor" />
                                 </svg>
                             </span>
-                            <span>Additional <strong>12</strong> channels</span>
+                            <span><strong>12</strong>additional premium Sports channels</span>
                         </li>
                         <li>
                             <span class="icon">
@@ -359,7 +365,7 @@
                                     <path d="M10 15.172l9.192-9.193 1.415 1.414L10 18l-6.364-6.364 1.414-1.414z" fill="currentColor" />
                                 </svg>
                             </span>
-                            <span>Dedicated Support</span>
+                            <span>Combined with the Preferred Plan overs the ultimate in sports programming</span>
                         </li>
                        
                         <li>
@@ -378,10 +384,10 @@
                                     <path d="M10 15.172l9.192-9.193 1.415 1.414L10 18l-6.364-6.364 1.414-1.414z" fill="currentColor" />
                                 </svg>
                             </span>
-                            <span>Mobile App</span>
+                            <span>Record via PVR and also enjoy Replay TV for all your shows so you don't miss anything.</span>
                         </li>
                     </ul>
-                    <button class="button Sports">
+                    <button class="button Sports" onclick="location.href='/service';">
                         Choose plan
                     </button>
                 </div>
@@ -406,7 +412,7 @@
                                     <path d="M10 15.172l9.192-9.193 1.415 1.414L10 18l-6.364-6.364 1.414-1.414z" fill="currentColor" />
                                 </svg>
                             </span>
-                            <span><strong>6</strong> channels</span>
+                            <span><strong>6</strong> additional HBO premium channels</span>
                         </li>
                         <li>
                             <span class="icon">
@@ -415,17 +421,17 @@
                                     <path d="M10 15.172l9.192-9.193 1.415 1.414L10 18l-6.364-6.364 1.414-1.414z" fill="currentColor" />
                                 </svg>
                             </span>
-                            <span>Dedicated Support</span>
+                            <span>Movies, Documentaries specials</span>
                         </li>
                        
                         <li>
-                                <!-- <span class="icon">
-                                    <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" width="24" height="24">
-                                        <path fill="none" d="M0 0h24v24H0z" />
-                                        <path d="M10 15.172l9.192-9.193 1.415 1.414L10 18l-6.364-6.364 1.414-1.414z" fill="currentColor" />
-                                    </svg>
-                                </span> -->
-                                {{!-- <span class="strike">No additional DVR hrs. beyond Basic</span> --}}
+                                <span class="icon">
+                                <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" width="24" height="24">
+                                    <path fill="none" d="M0 0h24v24H0z" />
+                                    <path d="M10 15.172l9.192-9.193 1.415 1.414L10 18l-6.364-6.364 1.414-1.414z" fill="currentColor" />
+                                </svg>
+                            </span>
+                            <span>HBO only original series shows </span>
                         </li>
                         <li>
                             <span class="icon">
@@ -434,10 +440,10 @@
                                     <path d="M10 15.172l9.192-9.193 1.415 1.414L10 18l-6.364-6.364 1.414-1.414z" fill="currentColor" />
                                 </svg>
                             </span>
-                            <span>Mobile App</span>
+                            <span>Walking Dead, Game of Thrones, Dune, Curb your Enthusiasm etc etc.</span>
                         </li>
                     </ul>
-                    <button class="button HBO">
+                    <button class="button HBO" onclick="location.href='/service';">
                         Choose plan
                     </button>
                 </div>
@@ -449,7 +455,7 @@
         
                     <span class="pricing Cinemax">
                         <span>
-                            +${{data.spanish.Price}} <small>/ m</small>
+                            <small></small>
                         </span>
                     </span>
                     <h2 class="title">{{data.spanish.Name}}</h2>
@@ -462,16 +468,16 @@
                                     <path d="M10 15.172l9.192-9.193 1.415 1.414L10 18l-6.364-6.364 1.414-1.414z" fill="currentColor" />
                                 </svg>
                             </span>
-                            <span><strong>4</strong> channels</span>
+                            <span>Coming soon a comprehensive selection of Spanish language shows from all over the world.</span>
                         </li>
                         <li>
-                            <span class="icon">
+                            {{!-- <span class="icon">
                                 <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" width="24" height="24">
                                     <path fill="none" d="M0 0h24v24H0z" />
                                     <path d="M10 15.172l9.192-9.193 1.415 1.414L10 18l-6.364-6.364 1.414-1.414z" fill="currentColor" />
                                 </svg>
                             </span>
-                            <span>Dedicated Support</span>
+                            <span>Dedicated Support</span> --}}
                         </li>
                        
                         <li>
@@ -484,17 +490,17 @@
                                 {{!-- <span class="strike">No additional DVR hrs. beyond Basic</span> --}}
                         </li>
                         <li>
-                            <span class="icon">
+                            {{!-- <span class="icon">
                                 <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" width="24" height="24">
                                     <path fill="none" d="M0 0h24v24H0z" />
                                     <path d="M10 15.172l9.192-9.193 1.415 1.414L10 18l-6.364-6.364 1.414-1.414z" fill="currentColor" />
                                 </svg>
                             </span>
-                            <span>Mobile App</span>
+                            <span>Mobile App</span> --}}
                         </li>
                     </ul>
                     <button class="button Cinemax">
-                        Choose plan
+                        Coming Soon
                     </button>
                 </div>
             </article>
