--- a/views/pages/homePage.handlebars
+++ b/views/pages/homePage.handlebars
@@ -12,7 +12,7 @@
 
         <!-- Top Content -->
         <div class="top-content">
-            <h1 class="home-page-title">Traditional Cable -<br><span style="color: #ffa039;"> Streamed </span>Directly <br>to you</h1>
+            <h1 class="home-page-title"><span style="color: #ffa039;">Introduces</span> <br> Traditional Cable -<br><span style="color: #ffa039;"> Streamed </span>Directly <br>to you</h1>
         </div>
 
         <!-- Bottom Content -->
