--- a/views/pages/internetPage.handlebars
+++ b/views/pages/internetPage.handlebars
@@ -5,8 +5,8 @@
         
         <div class="main-feature" >
             <div class="heading-container">
-                <h1><span style="color: #FFAB00;"> Indulge</span> in Seamless Online Experiences</h1>
-                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam.</p>
+                <h1><span style="color: #FFAB00;"> Indulge</span> in Seamless Online experiences incorporating fiber optic technology and delivering uninterrupted, seamless and secure internet connectivity.</h1>
+                {{!-- <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam.</p> --}}
             </div>
             
             
@@ -16,21 +16,24 @@
                                 <div class="container-card bg-orange-box">
                                     <i class="fa-solid fa-trophy"></i>
                                     <p class="card-title">Enjoy Effortless Browsing</p>
-                                    <p class="card-description">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam.</p>
+                                    <p class="card-description">Enjoy all that the Internet has to offer, seamlessly and uninterrupted streaming of all your favorite content.</p>
+                                     <a href="/service" class="feature-card-btn">Get Started</a>
                                 </div>
                             </div>
                             <div class="card">
                                 <div class="container-card bg-orange-box">
                                     <i class="fas fa-wifi"></i>
                                     <p class="card-title">High-Speed Internet to All Your Favorites</p>
-                                    <p class="card-description">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam.</p>
+                                    <p class="card-description">The very best in Internet service either direct wired or wirelessly throughout your home without dead spots.</p>
+                                    <a href="/service" class="feature-card-btn">Get Started</a>
                                 </div>
                             </div>
                             <div class="card">
                                 <div class="container-card bg-orange-box">
                                     <i class="fa-solid fa-piggy-bank"></i>
                                     <p class="card-title">Uninterrupted Performance. Better Savings</p>
-                                    <p class="card-description">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam.</p>
+                                    <p class="card-description"> A stable and robust Internet service ensures the best in performance and is superior to all satellite, traditional telephone or cellular based internet service plans and at a very competitive price.</p>
+                                    <a href="/service" class="feature-card-btn">Get Started</a>
                                 </div>
                             </div>
                  
