--- a/public/css/addservices.css
+++ b/public/css/addservices.css
@@ -505,6 +505,18 @@ justify-content: center;
 transition: transform 0.3s ease;
 width: 100%;
 }
+.pricing-empty:before {
+  vertical-align: middle;
+ content: "\f058";
+  font-family: "Font Awesome 5 Free";
+  color: #080509;
+  text-align: center;
+  padding-right: 10px;
+}
+.pricing-empty
+{
+border-top: 1px solid #7273723b;
+}
 .carousel-btn.style3{
   position: absolute;
   top: 100%;
@@ -1003,7 +1015,7 @@ margin-right: 5px;
 .card-plan{
   border-radius: 16px;
   box-shadow: 0 30px 30px -25px rgba(65, 51, 183, 0.25);
-  max-width: 300px;
+  max-width: 350px;
 }
 
 .plan.Extended{
@@ -1059,7 +1071,7 @@ margin-right: 5px;
   background: linear-gradient(71deg, #080509, #1a171c, #080509);
   border-radius: 12px;
   position: relative;
-  height: 470px;
+  height: 570px;
 }
 
 .plan .pricing {
@@ -1142,7 +1154,7 @@ margin-right: 5px;
   background-color: #38caff;
 }
 
-@media screen and (max-width: 1346px) {
+/* @media screen and (max-width: 1346px) {
   .gradient-cards2{
       grid-template-columns: repeat(2, 1fr);
       padding-left: 15%;
@@ -1162,8 +1174,46 @@ margin-right: 5px;
       grid-template-columns: 1fr;
       padding-left: 15%;
     }
+} */
+@media screen and (max-width: 1346px) {
+  .gradient-cards2{
+      grid-template-columns: repeat(2, 1fr);
+      padding-left: 15%;
+      justify-content: center;
+    }
+ 
 }
+@media screen and (max-width: 991px) {
 
+  .gradient-cards2{
+      grid-template-columns: repeat(2, 1fr);
+      width: 100%;
+      justify-content: center;
+    }
+    .plan .inner{
+      width: 100%;
+      height: auto;
+    }
+    .card-plan{
+      width: 100%; 
+    }
+}
+@media screen and (max-width: 950px) {
+
+  .gradient-cards2{
+      grid-template-columns: 1fr;
+      width: 100%;
+      height: auto;
+      justify-content: center;
+    }
+    .plan .inner{
+      height: auto;
+      width: 100%;
+    }
+    .card-plan{
+      width: 100%; 
+    }
+}
 .logo-carousel {
   position: relative;
   margin: 1rem 0;
