--- a/public/css/homepage.css
+++ b/public/css/homepage.css
@@ -47,7 +47,7 @@ body {
 /* Top Content */
 .top-content {
   position: absolute;
-  top: 3%;
+  /* top: 3%; */
   left: 5%;
   z-index: 2;
   text-align: left;
