--- a/views/pages/phonePage.handlebars
+++ b/views/pages/phonePage.handlebars
@@ -6,8 +6,8 @@
         
         <div class="main-feature" >
             <div class="heading-container">
-                <h1>Seamless Calls, <span style="color: #FFC200;"> No Matter the Distance</span></h1>
-                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam.</p>
+                <h1>Home phone <span style="color: #FFC200;">seamless and reliable</span> always</h1>
+                {{!-- <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam.</p> --}}
             </div>
             
             
@@ -17,21 +17,24 @@
                                 <div class="container-card bg-orange-box">
                                     <i class="fa-solid fa-trophy"></i>
                                     <p class="card-title">Perfect Sound, Clear Calls on the Go</p>
-                                    <p class="card-description">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam.</p>
+                                    <p class="card-description">Our Internet based VOIP home phone service guarantees you can communicate and stay connected seamlessly even during severe weather conditions, emergency community events, blackouts or mobile phone disruptions.</p>
+                                    <a href="/service" class="feature-card-btn">Get Started</a>
                                 </div>
                             </div>
                             <div class="card">
                                 <div class="container-card bg-orange-box">
                                     <i class="fas fa-phone"></i>
-                                    <p class="card-title">Stay Connected to All Your Favorites</p>
-                                    <p class="card-description">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam.</p>
+                                    <p class="card-title">Stay Connected</p>
+                                    <p class="card-description">Make and receive calls day or night, you're never alone, you're never out of touch. Make any long distance calls anywhere in the Continental USA or its territories and also make calls to Canada and Mexico for free and talk as long as you like. Long distance international calling is also available at preferred rates.</p>
+                                    <a href="/service" class="feature-card-btn">Get Started</a>
                                 </div>
                             </div>
                             <div class="card">
                                 <div class="container-card bg-orange-box">
                                     <i class="fa-solid fa-piggy-bank"></i>
                                     <p class="card-title">Seamless Calls. Better Savings</p>
-                                    <p class="card-description">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam.</p>
+                                    <p class="card-description">Crystal Clear reception from your home based traditional phone, guarantees you'll never be out of touch again and your loved one's don't need to worry if they try to reach you on your cell phone in an emergency, plus call 911 anytime.</p>
+                                    <a href="/service" class="feature-card-btn">Get Started</a>
                                 </div>
                             </div>
                  
