--- a/views/partials/navbar.handlebars
+++ b/views/partials/navbar.handlebars
@@ -1,6 +1,6 @@
     <nav>
         <div class="logo">
-          <img src="../../public/logos/HOT_blue.png" alt="logo" />
+          <img src="../../public/logos/HOT_red.png" alt="logo" />
         
         </div>
         <ul>
